First draft: convert to link, add ellipses, ensure icon alignment

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -215,13 +215,25 @@ $shadow-transition-width: 10px;
         }
         .link-cell,
         .text-cell {
-          display: block;
+          display: inline-flex;
           overflow: hidden;
           white-space: nowrap;
           text-overflow: ellipsis;
           margin: 0;
           .__react_component_tooltip {
             white-space: normal;
+          }
+        }
+        .link-cell {
+          &:hover {
+            text-decoration: underline;
+          }
+
+          > div {
+            display: block;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
           }
         }
         .w400 {
