--- a/frontend/pages/queries/ManageQueriesPage/_styles.scss
+++ b/frontend/pages/queries/ManageQueriesPage/_styles.scss
@@ -187,8 +187,6 @@
       }
     }
     .query-icon {
-      position: relative;
-      top: 2px;
       display: block;
     }
   }
